--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,8 @@
 @import "base/reset";
 @import "base/typography";
 
+@import "components/button";
+
 @import "layout/grid.scss";
 
 @import "shame.scss";
