--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -41,7 +41,12 @@ h6 {
 }
 
 h1 {
-  font-size: calc(60 / 16 * 1rem);
+  font-size: 3.75rem;
+  line-height: 1.5;
+}
+
+h2 {
+  font-size: 2rem;
   line-height: 1.5;
 }
 
