--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -2,7 +2,7 @@
 
 .button {
   padding: 0.75rem 1rem;
-  background-image: $accent-color;
+  background-image: $primary-accent-color;
   border-radius: $default-border-radius;
   display: flex;
   gap: 0.5rem;
