--- a/src/app/features/portfolio/components/section-header/section-header.component.html
+++ b/src/app/features/portfolio/components/section-header/section-header.component.html
@@ -1,5 +1,5 @@
 <div class="section-header">
-  <h2 class="section-header__subtitle">
+  <h2 class="subtitle section-header__subtitle">
     {{ subtitle }}
   </h2>
   <h3 class="section-header__title">
