--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,14 +2,20 @@
 $primary-font-color-light: #ffffff;
 $primary-font-color-dark: #303030;
 $secondary-font-color-light: #e2e2e2;
-$secondary-font-color-dark: #5d5d5d;
-$accent-color: linear-gradient(90deg, hsl(241, 70, 60), hsl(292, 70, 60));
-$accent-color-hover: hsl(348, 78%, 41%);
-$accent-color-disabled: hsl(348, 48%, 61%);
+$secondary-font-color-dark: #5c5c5c;
+$primary-accent-color: linear-gradient(
+  90deg,
+  hsl(241, 70, 60),
+  hsl(292, 70, 60)
+);
+$primary-accent-color-hover: hsl(348, 78%, 41%);
+$primary-accent-color-disabled: hsl(348, 48%, 61%);
+$secondary-accent-color: #9997ff;
 $primary-background-color-light: #ffffff;
 $secondary-background-color-light: #f6f6f6;
 $primary-background-color-dark: #2a2a2a;
 $secondary-background-color-dark: #3a3a3a;
+$overlay-color: hsla(0, 0, 0, 0.7);
 
 // Bootstrap breakpoints
 $grid-breakpoints: (
@@ -29,6 +35,9 @@ $container-widths: (
   "xl": 1140px,
   "xxl": 1320px,
 );
+
+// Bootstrap grid
+$container-horizontal-padding-xs: 0.75rem;
 
 // Font-families
 $primary-font-light: "Poppins-Light";
