--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -50,7 +50,19 @@ h2 {
   line-height: 1.5;
 }
 
+h3 {
+  font-size: 1.5rem;
+  line-height: 1.25;
+}
+
 p {
   font-size: 1rem;
   line-height: 1.175;
+}
+
+.subtitle {
+  font-size: 0.75rem;
+  line-height: 1.5;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
 }
