--- a/src/app/features/portfolio/pages/home/home.component.html
+++ b/src/app/features/portfolio/pages/home/home.component.html
@@ -2,3 +2,4 @@
 <portfolio-about-section></portfolio-about-section>
 <portfolio-services-section></portfolio-services-section>
 <portfolio-projects-section></portfolio-projects-section>
+<portfolio-clients-section></portfolio-clients-section>
