Created swiper slide with testimonials

--- a/src/app/features/portfolio/pages/home/home.component.html
+++ b/src/app/features/portfolio/pages/home/home.component.html
@@ -3,3 +3,4 @@
 <portfolio-services-section></portfolio-services-section>
 <portfolio-projects-section></portfolio-projects-section>
 <portfolio-clients-section></portfolio-clients-section>
+<portfolio-testimonials-section></portfolio-testimonials-section>
