--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -16,6 +16,7 @@ $secondary-background-color-light: #f6f6f6;
 $primary-background-color-dark: #2a2a2a;
 $secondary-background-color-dark: #3a3a3a;
 $overlay-color: hsla(0, 0, 0, 0.7);
+$muted-color: #c4c4c4;
 
 // Bootstrap breakpoints
 $grid-breakpoints: (
