--- a/src/app/features/portfolio/pages/home/home.component.html
+++ b/src/app/features/portfolio/pages/home/home.component.html
@@ -4,3 +4,4 @@
 <portfolio-projects-section></portfolio-projects-section>
 <portfolio-clients-section></portfolio-clients-section>
 <portfolio-testimonials-section></portfolio-testimonials-section>
+<portfolio-contact-section></portfolio-contact-section>
