--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -9,11 +9,7 @@ $primary-accent-color: linear-gradient(
   hsl(292, 70, 60)
 );
 $primary-accent-color-hover: hsl(348, 78%, 41%);
-$primary-accent-color-disabled: linear-gradient(
-  90deg,
-  hsl(241, 30, 60),
-  hsl(292, 30, 60)
-);
+$primary-accent-color-disabled-filter: saturate(30%) brightness(1.5);
 $secondary-accent-color: #9997ff;
 $primary-background-color-light: #ffffff;
 $secondary-background-color-light: #f6f6f6;
@@ -21,6 +17,7 @@ $primary-background-color-dark: #2a2a2a;
 $secondary-background-color-dark: #3a3a3a;
 $overlay-color: hsla(0, 0, 0, 0.7);
 $muted-color: #c4c4c4;
+$error-color: hsl(0, 77%, 58%);
 
 // Bootstrap breakpoints
 $grid-breakpoints: (
