--- a/src/app/features/portfolio/pages/home/home.component.html
+++ b/src/app/features/portfolio/pages/home/home.component.html
@@ -5,3 +5,4 @@
 <portfolio-clients-section></portfolio-clients-section>
 <portfolio-testimonials-section></portfolio-testimonials-section>
 <portfolio-contact-section></portfolio-contact-section>
+<shared-footer></shared-footer>
