--- a/src/app/features/portfolio/pages/home/home.component.html
+++ b/src/app/features/portfolio/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<shared-header></shared-header>
 <portfolio-hero-section></portfolio-hero-section>
 <portfolio-about-section></portfolio-about-section>
 <portfolio-services-section></portfolio-services-section>
