--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -53,3 +53,7 @@ $secondary-font-bold: "Railway-Bold";
 // Misc
 $default-border-radius: 12px;
 $default-button-hitbox: 0.5rem;
+
+// Transitions
+$default-transition-duration: 0.25s;
+$default-transition-timing-function: ease-in-out;
