--- a/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.scss
+++ b/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.scss
@@ -1,4 +1,5 @@
 @import "abstracts/variables";
+@import "abstracts/mixins";
 
 .testimonials-section {
   background-color: $primary-background-color-light;
@@ -27,7 +28,7 @@
     border: 1px solid transparent;
     border-radius: 50%;
     appearance: none;
-    transition: background-color 0.25s ease-in-out;
+    @include with-transition(background-color);
 
     &:checked {
       background-color: transparent;
