Finished header and navigation

--- a/src/app/features/portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="inner-container">
         <div class="content-container">
-          <h1 #heroTitle class="hero__title">
+          <h1 class="hero__title">
             Hi, <br />
             ich bin <span class="hero__name">Tomke</span>
           </h1>
