--- a/src/app/features/portfolio/components/service-card/service-card.component.scss
+++ b/src/app/features/portfolio/components/service-card/service-card.component.scss
@@ -7,7 +7,7 @@
   align-items: center;
   background-color: $primary-background-color-light;
   border-radius: $default-border-radius;
-  box-shadow: 0 4px 4px 0 hsla(0, 0, 0, 0.25);
+  box-shadow: $default-box-shadow;
 
   &__icon {
     width: 100px;
