--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -3,28 +3,35 @@
 
 .header {
   width: 100%;
-  height: 64px;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
-  @include with-transition(all);
+  // Has to be 2 because of swiper slides
+  z-index: 2;
+  @include with-transition(box-shadow);
 
   &--white {
-    background-color: $primary-background-color-light;
-    border-bottom: 1px solid $primary-background-color-light;
+    box-shadow: 0 4px 4px 0 hsla(0, 0, 70, 0.25);
   }
-
   &--transparent {
-    background-color: transparent;
-    border-bottom: 1px solid #a3a3a3;
+    box-shadow: none;
   }
-
-  &__container {
-    height: 100%;
+  &__top-row {
+    height: 64px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include with-transition(all);
+
+    &--white {
+      background-color: $primary-background-color-light;
+      border-bottom: 1px solid $primary-background-color-light;
+    }
+
+    &--transparent {
+      background-color: transparent;
+      border-bottom: 1px solid #a3a3a3;
+    }
   }
 
   &__portfolio-icon {
@@ -54,19 +61,18 @@
   }
 
   &__navigation {
-    width: 100%;
     height: 0px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transform: translate(0, 100%);
     background-color: $primary-background-color-light;
     overflow: hidden;
     @include with-transition(height);
 
     &--expanded {
-      height: 15rem;
+      height: 16rem;
     }
+  }
+
+  &__navigation-list {
+    padding: 0.5rem 0;
   }
 
   &__navigation-link {
@@ -75,13 +81,25 @@
     text-transform: uppercase;
     font-size: 1rem;
     line-height: 2;
-    padding: 0.25rem 0;
+    padding: 0.5rem 0;
+    position: relative;
 
-    &:first-child {
-      padding-top: 0.5rem;
+    &::after {
+      content: "";
+      width: 8px;
+      height: 8px;
+      position: absolute;
+      bottom: 0.25rem;
+      left: 50%;
+      transform: translate(-50%, 0);
+      background-image: $primary-accent-color;
+      border-radius: 50%;
+      opacity: 0;
+      @include with-transition(opacity);
     }
-    &:last-child {
-      padding-bottom: 0.5rem;
+
+    &--active::after {
+      opacity: 1;
     }
   }
 }
