--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -53,6 +53,7 @@ $secondary-font-bold: "Railway-Bold";
 // Misc
 $default-border-radius: 12px;
 $default-button-hitbox: 0.5rem;
+$default-box-shadow: 0 4px 4px 0 hsla(0, 0, 0, 0.25);
 
 // Transitions
 $default-transition-duration: 0.25s;
