Implemented slideshow and the text information section

--- a/src/app/features/portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.html
@@ -13,7 +13,11 @@
             cillum aliqua tempor et culpa.
           </p>
           <div class="social-media-channels-container">
-            <shared-social-media-channels></shared-social-media-channels>
+            <shared-social-media-channels
+              instagramUrl="/"
+              linkedInUrl="/"
+              tikTokUrl="/"
+            ></shared-social-media-channels>
           </div>
           <button class="button">
             <svg
