--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -36,7 +36,11 @@
           </defs>
         </svg>
       </a>
-      <shared-social-media-channels></shared-social-media-channels>
+      <shared-social-media-channels
+        instagramUrl="/"
+        linkedInUrl="/"
+        tikTokUrl="/"
+      ></shared-social-media-channels>
     </div>
     <p class="footer__contact-information">
       +49 12345678 <br />
