--- a/src/app/features/portfolio/components/project-gallery-item/project-gallery-item.component.html
+++ b/src/app/features/portfolio/components/project-gallery-item/project-gallery-item.component.html
@@ -1,4 +1,4 @@
-<div class="project-gallery-item">
+<a class="project-gallery-item" [routerLink]="'/projects/' + project?.id">
   <div class="project-gallery-item__overlay">
     <h3 class="subtitle project-gallery-item__subtitle">
       {{ project?.services?.join(", ") }}
@@ -15,4 +15,4 @@
     alt=""
     class="project-gallery-item__thumbnail-image"
   />
-</div>
+</a>
