--- a/src/app/features/portfolio/components/project-gallery-item/project-gallery-item.component.scss
+++ b/src/app/features/portfolio/components/project-gallery-item/project-gallery-item.component.scss
@@ -7,6 +7,7 @@
   border-radius: $default-border-radius;
   overflow: hidden;
   position: relative;
+  display: block;
 
   &:hover &__overlay {
     opacity: 1;
