--- a/src/app/shared/components/social-media-channels/social-media-channels.component.html
+++ b/src/app/shared/components/social-media-channels/social-media-channels.component.html
@@ -1,5 +1,10 @@
 <div class="social-media-channels">
-  <a href="/" class="social-media-channels__link">
+  <a
+    *ngIf="linkedInUrl"
+    [href]="linkedInUrl"
+    target="_blank"
+    class="social-media-channels__link"
+  >
     <svg
       width="24"
       height="24"
@@ -21,7 +26,12 @@
       </defs>
     </svg>
   </a>
-  <a href="/" class="social-media-channels__link">
+  <a
+    *ngIf="instagramUrl"
+    [href]="instagramUrl"
+    target="_blank"
+    class="social-media-channels__link"
+  >
     <svg
       width="24"
       height="24"
@@ -43,7 +53,7 @@
       </defs>
     </svg>
   </a>
-  <a href="/" class="social-media-channels__link">
+  <a *ngIf="tikTokUrl" [href]="tikTokUrl" class="social-media-channels__link">
     <svg
       width="24"
       height="24"
