--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -8,30 +8,40 @@
   left: 0;
   // Has to be 2 because of swiper slides
   z-index: 2;
-  @include with-transition(box-shadow);
+  @include with-transition(all);
 
   &--white {
     box-shadow: 0 4px 4px 0 hsla(0, 0, 70, 0.25);
+    border-bottom: 1px solid $primary-background-color-light;
   }
   &--transparent {
     box-shadow: none;
+    border-bottom: 1px solid #a3a3a3;
   }
-  &__top-row {
-    height: 64px;
+
+  &__inner-container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    @include with-transition(all);
+    flex-direction: column;
+  }
+
+  &__top-row-container {
+    height: 63px;
+    @include with-transition(background-color);
 
     &--white {
       background-color: $primary-background-color-light;
-      border-bottom: 1px solid $primary-background-color-light;
     }
 
     &--transparent {
       background-color: transparent;
-      border-bottom: 1px solid #a3a3a3;
     }
+  }
+
+  &__top-row {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   &__portfolio-icon {
@@ -73,6 +83,9 @@
 
   &__navigation-list {
     padding: 0.5rem 0;
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
   }
 
   &__navigation-link {
@@ -101,5 +114,82 @@
     &--active::after {
       opacity: 1;
     }
+  }
+
+  @include media-breakpoint-up("md") {
+    height: 64px;
+
+    &--white {
+      background-color: $primary-background-color-light;
+    }
+
+    &--transparent {
+      background-color: transparent;
+    }
+
+    &__inner-container,
+    &__top-row-container,
+    &__navigation,
+    &__navigation-list-container,
+    &__navigation-list {
+      height: 100%;
+    }
+
+    &__inner-container {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    &__top-row-container {
+      background-color: initial;
+    }
+
+    &__burger-menu-button {
+      display: none;
+    }
+
+    &__navigation {
+      background-color: initial;
+    }
+
+    &__navigation-list {
+      flex-direction: row;
+      align-items: center;
+      gap: 1rem;
+      padding: initial;
+    }
+
+    &__navigation-link {
+      @include with-transition(color);
+      font-family: $secondary-font-bold;
+      letter-spacing: 0.1em;
+      font-size: 0.875rem;
+
+      &--white {
+        color: $secondary-font-color-dark;
+      }
+
+      &--transparent {
+        color: $primary-font-color-light;
+      }
+    }
+  }
+}
+
+// Default container class is overwritten by the rules specified via a device-specific
+// flag
+.container--mobile {
+  @include media-breakpoint-up("md") {
+    padding: initial;
+    max-width: initial;
+    margin: initial;
+  }
+}
+
+.container--tablet {
+  @include media-breakpoint-down("md") {
+    padding: initial;
+    max-width: initial;
+    margin: initial;
   }
 }
