--- a/src/app/features/portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.html
@@ -1,8 +1,8 @@
 <section class="hero">
   <div class="hero__overlay">
     <div class="container">
-      <div class="inner-container">
-        <div class="content-container">
+      <div class="hero__inner-container">
+        <div class="hero__content-container">
           <h1 class="hero__title">
             Hi, <br />
             ich bin <span class="hero__name">Tomke</span>
@@ -12,7 +12,7 @@
             tempor non ad. Eiusmod Lorem sint ipsum do cillum incididunt tempor
             cillum aliqua tempor et culpa.
           </p>
-          <div class="social-media-channels-container">
+          <div class="hero__social-media-channels-container">
             <shared-social-media-channels
               instagramUrl="/"
               linkedInUrl="/"
