--- a/src/app/features/portfolio/components/service-card/service-card.component.html
+++ b/src/app/features/portfolio/components/service-card/service-card.component.html
@@ -1,6 +1,6 @@
 <div class="service-card">
   <img [src]="service?.iconUrl" alt="" class="service-card__icon" />
-  <div class="text-container">
+  <div class="service-card__text-container">
     <h3 class="service-card__title">
       {{ service?.title }}
     </h3>
