--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="section footer">
-  <div class="container footer__container">
+  <div class="container">
     <a href="/" class="footer__impressum-link"> Impressum </a>
     <div class="footer__icons-container">
       <a href="/">
