--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,8 @@
 
 @import "components/button";
 
-@import "layout/grid.scss";
+@import "layout/aspect-ratio";
+@import "layout/grid";
 @import "layout/section";
 
-@import "shame.scss";
+@import "shame";
