--- a/src/app/features/portfolio/components/about-section/about-section.component.html
+++ b/src/app/features/portfolio/components/about-section/about-section.component.html
@@ -4,26 +4,28 @@
       title="Was mich ausmacht"
       subtitle="Über mich"
     ></portfolio-section-header>
-    <div class="image-container">
-      <div class="padding-top-hack-outer-container">
-        <div class="padding-top-hack-inner-container">
-          <img
-            src="/assets/images/about-image.jpeg"
-            alt=""
-            class="about__image"
-          />
+    <div class="about__content-container">
+      <div class="about__image-container">
+        <div class="padding-top-hack padding-top-hack--1-by-1">
+          <div class="padding-top-hack__inner-container">
+            <img
+              src="/assets/images/about-image.jpeg"
+              alt=""
+              class="about__image"
+            />
+          </div>
         </div>
       </div>
+      <p class="section__paragraph">
+        Labore id qui cupidatat laborum mollit. Velit eiusmod ullamco laborum
+        commodo sunt laboris sunt consectetur aliqua laborum consectetur quis
+        magna ea. Id exercitation fugiat sunt adipisicing. Veniam et nisi cillum
+        officia nostrud non labore do commodo proident sunt dolor pariatur
+        ullamco. Sunt officia in ut quis ut dolore magna in in. Incididunt anim
+        eiusmod velit fugiat. Eu occaecat aliquip aliqua voluptate laboris aute
+        qui cillum incididunt pariatur sit laboris aute. Adipisicing aute ea est
+        do.
+      </p>
     </div>
-    <p class="section__paragraph">
-      Labore id qui cupidatat laborum mollit. Velit eiusmod ullamco laborum
-      commodo sunt laboris sunt consectetur aliqua laborum consectetur quis
-      magna ea. Id exercitation fugiat sunt adipisicing. Veniam et nisi cillum
-      officia nostrud non labore do commodo proident sunt dolor pariatur
-      ullamco. Sunt officia in ut quis ut dolore magna in in. Incididunt anim
-      eiusmod velit fugiat. Eu occaecat aliquip aliqua voluptate laboris aute
-      qui cillum incididunt pariatur sit laboris aute. Adipisicing aute ea est
-      do.
-    </p>
   </div>
 </section>
