--- a/src/app/features/portfolio/components/contact-section/contact-section.component.scss
+++ b/src/app/features/portfolio/components/contact-section/contact-section.component.scss
@@ -1,4 +1,5 @@
 @import "abstracts/variables";
+@import "abstracts/mixins";
 
 .contact-section {
   background-color: $secondary-background-color-light;
@@ -8,6 +9,12 @@
     flex-direction: column;
     gap: 1rem;
     margin-bottom: 2.5rem;
+  }
+
+  &__name-and-email-form-fields-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 
   &__form-field-container {
@@ -35,4 +42,19 @@
     font-size: 1rem;
     line-height: 1.175;
   }
+
+  @include media-breakpoint-up("md") {
+    &__name-and-email-form-fields-container {
+      flex-direction: row;
+      gap: 1rem;
+    }
+
+    &__form-field-container {
+      flex: 1;
+    }
+  }
+}
+
+.button {
+  margin: 0 auto;
 }
