--- a/src/app/features/portfolio/components/project-gallery-item/project-gallery-item.component.scss
+++ b/src/app/features/portfolio/components/project-gallery-item/project-gallery-item.component.scss
@@ -21,7 +21,7 @@
     height: 100%;
     opacity: 0;
     background-color: $overlay-color;
-    padding: 1.75rem;
+    padding: 0.75rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -47,5 +47,11 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  @include media-breakpoint-up("md") {
+    &__overlay {
+      padding: 1.75rem;
+    }
   }
 }
