--- a/src/app/features/portfolio/components/project-gallery/project-gallery.component.scss
+++ b/src/app/features/portfolio/components/project-gallery/project-gallery.component.scss
@@ -17,24 +17,6 @@
     cursor: grabbing;
   }
 
-  @include media-breakpoint-up("sm") {
-    padding-left: calc((100vw - map.get($container-widths, "sm")) / 2);
-  }
-  @include media-breakpoint-up("md") {
-    --height: 600px;
-    --grid-gap: 2rem;
-    padding-left: calc((100vw - map.get($container-widths, "md")) / 2);
-  }
-  @include media-breakpoint-up("lg") {
-    padding-left: calc((100vw - map.get($container-widths, "lg")) / 2);
-  }
-  @include media-breakpoint-up("xl") {
-    padding-left: calc((100vw - map.get($container-widths, "xl")) / 2);
-  }
-  @include media-breakpoint-up("xxl") {
-    padding-left: calc((100vw - map.get($container-widths, "xxl")) / 2);
-  }
-
   &__grids-container {
     height: 100%;
     display: flex;
@@ -77,5 +59,33 @@
     &:nth-child(5) {
       grid-area: fifth-project;
     }
+  }
+
+  @include media-breakpoint-up("sm") {
+    padding-left: calc(
+      (100vw - (100vw - 100%) - map.get($container-widths, "sm")) / 2
+    );
+  }
+  @include media-breakpoint-up("md") {
+    --height: 600px;
+    --grid-gap: 2rem;
+    padding-left: calc(
+      (100vw - (100vw - 100%) - map.get($container-widths, "md")) / 2
+    );
+  }
+  @include media-breakpoint-up("lg") {
+    padding-left: calc(
+      (100vw - (100vw - 100%) - map.get($container-widths, "lg")) / 2
+    );
+  }
+  @include media-breakpoint-up("xl") {
+    padding-left: calc(
+      (100vw - (100vw - 100%) - map.get($container-widths, "xl")) / 2
+    );
+  }
+  @include media-breakpoint-up("xxl") {
+    padding-left: calc(
+      (100vw - (100vw - 100%) - map.get($container-widths, "xxl")) / 2
+    );
   }
 }
