--- a/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.scss
+++ b/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 @import "abstracts/variables";
 @import "abstracts/mixins";
 
@@ -59,12 +60,12 @@
     }
 
     &--left {
-      left: 0;
+      left: $container-horizontal-padding-xs;
       margin-left: -$default-button-hitbox;
     }
 
     &--right {
-      right: 0;
+      right: $container-horizontal-padding-xs;
       margin-right: -$default-button-hitbox;
     }
   }
@@ -72,5 +73,60 @@
   &__arrow-icon {
     width: 24px;
     height: 24px;
+  }
+
+  @include media-breakpoint-up("sm") {
+    &__navigation-button--left {
+      left: calc(
+        (100vw - (100vw - 100%) - map.get($container-widths, "sm")) / 2
+      );
+    }
+    &__navigation-button--right {
+      right: calc(
+        (100vw - (100vw - 100%) - map.get($container-widths, "sm")) / 2
+      );
+    }
+  }
+
+  @include media-breakpoint-up("md") {
+    &__navigation-button--left {
+      left: initial;
+      right: 50%;
+      transform: translate(calc(-350px / 2), -50%);
+      margin-left: initial;
+      margin-right: 7rem;
+    }
+    &__navigation-button--right {
+      right: initial;
+      left: 50%;
+      transform: translate(calc(350px / 2), -50%);
+      margin-right: initial;
+      margin-left: 7rem;
+    }
+  }
+}
+
+.swiper {
+  padding: 0 $container-horizontal-padding-xs;
+
+  @include media-breakpoint-up("sm") {
+    padding: 0
+      calc((100vw - (100vw - 100%) - map.get($container-widths, "sm")) / 2);
+  }
+  @include media-breakpoint-up("md") {
+    padding: 0
+      calc((100vw - (100vw - 100%) - map.get($container-widths, "md")) / 2);
+  }
+  @include media-breakpoint-up("lg") {
+    padding: 0
+      calc((100vw - (100vw - 100%) - map.get($container-widths, "lg")) / 2);
+  }
+  @include media-breakpoint-up("xl") {
+    padding: 0
+      calc((100vw - (100vw - 100%) - map.get($container-widths, "xl")) / 2);
+  }
+  @include media-breakpoint-up("xxl") {
+    padding: 0
+      calc((100vw - (100vw - 100%) - map.get($container-widths, "xxl")) / 2);
   }
 }
