--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,15 +1,10 @@
+@use "sass:map";
 @import "abstracts/variables";
+@import "abstracts/mixins";
 
 .footer {
   background-color: $primary-background-color-dark;
   position: relative;
-
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4rem;
-  }
 
   &__impressum-link {
     color: $secondary-font-color-light;
@@ -41,5 +36,68 @@
     background-clip: text;
     color: transparent;
     font-family: $secondary-font-bold;
+  }
+
+  @include media-breakpoint-up("md") {
+    &__impressum-link {
+      flex: 1;
+    }
+
+    &__icons-container {
+      flex: 1;
+    }
+
+    &__contact-information {
+      flex: 1;
+      text-align: right;
+    }
+
+    &__author-note {
+      right: calc(
+        (100vw - (100vw - 100%) - map.get($container-widths, "md")) / 2
+      );
+      left: initial;
+      transform: initial;
+    }
+  }
+
+  @include media-breakpoint-up("lg") {
+    &__author-note {
+      right: calc(
+        (100vw - (100vw - 100%) - map.get($container-widths, "lg")) / 2
+      );
+    }
+  }
+  @include media-breakpoint-up("xl") {
+    &__author-note {
+      right: calc(
+        (100vw - (100vw - 100%) - map.get($container-widths, "xl")) / 2
+      );
+    }
+  }
+  @include media-breakpoint-up("xxl") {
+    &__author-note {
+      right: calc(
+        (100vw - (100vw - 100%) - map.get($container-widths, "xxl")) / 2
+      );
+    }
+  }
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+
+  @include media-breakpoint-up("md") {
+    flex-direction: row;
+    gap: initial;
+  }
+}
+
+.section {
+  @include media-breakpoint-up("md") {
+    padding: 8rem 0;
   }
 }
